--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/bparthu/pi-assistance#readme",
   "dependencies": {
     "gpio": "^0.2.10",
-    "onoff": "^6.0.0"
+    "onoff": "^6.0.0",
+    "raspberrypi-liquid-crystal": "^1.15.0"
   }
 }
